workloads/apps/termix/termix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: termix
  namespace: termix
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: demo-termix.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: termix
                port:
                  number: 3000
